@@ -1,5 +1,15 @@
 2009-10-06  Ivan Maidanski <ivmai@mail.ru>
 
+	* include/gc.h (GC_allow_register_threads, GC_register_my_thread,
+	GC_unregister_my_thread, GC_malloc_many): Refine the comment.
+	* include/gc.h (GC_malloc_many, GC_NEXT): Declare unconditionally
+	(that is, don't depend on GC_THREADS macro).
+	* include/gc.h: Don't check for __CYGWIN32__ and __CYGWIN__ along
+	with a check for GC_PTHREADS (since the former implies the
+	latter).
+
+2009-10-06  Ivan Maidanski <ivmai@mail.ru>
+
 	* include/gc.h: Reformat the code (make the indentation style
 	uniform across the file).
 	* include/gc.h (GC_SOLARIS_THREADS): Don't check for.
